k8s/hbg-admin-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hbg-admin-api
  labels:
    app: hbg-admin-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hbg-admin-api
  template:
    metadata:
      labels:
        app: hbg-admin-api
    spec:
      hostAliases:
      - ip: # ClusterIP of ingress-controller 10.0.166.57 
        hostnames:
        - sts.hbg.lol
        - www.sts.hbg.lol
      containers:
      - name: hbg-admin-api
        imagePullPolicy: Always
        image: exdrums/hbg-admin-api:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hbg-admin-api-service
  labels:
    app: hbg-admin-api
spec:
  # type: NodePort    # shows that this service is externally
  selector:
    app: hbg-admin-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    # nodePort: 30798
