k8s/hbg-admin-spa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hbg-admin-spa
  labels:
    app: hbg-admin-spa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hbg-admin-spa
  template:
    metadata:
      labels:
        app: hbg-admin-spa
    spec:
      containers:
      - name: hbg-admin-spa
        imagePullPolicy: Always
        image: exdrums/hbg-admin-spa:latest
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 40
          periodSeconds: 30
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: hbg-admin-spa-service
  labels:
    app: hbg-admin-spa
spec:
  # type: NodePort
  selector:
    app: hbg-admin-spa
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    # nodePort: 30796
