k8s/hbg-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hbg-admin
  labels:
    app: hbg-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hbg-admin
  template:
    metadata:
      labels:
        app: hbg-admin
    spec:
      containers:
      - name: hbg-admin
        imagePullPolicy: Never
        image: exdrums/hbg-admin
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: hbg-admin-service
  labels:
    app: hbg-admin
spec:
  # type: NodePort    # shows that this service is externally
  selector:
    app: hbg-admin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    # nodePort: 30798
