k8s/hbg-spa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hbg-spa
  labels:
    app: hbg-spa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hbg-spa
  template:
    metadata:
      labels:
        app: hbg-spa
    spec:
      containers:
      - name: hbg-spa
        imagePullPolicy: Never                  # never pull local images from docker, always use local
        image: exdrums/hbg-spa
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: hbg-spa-service
  labels:
    app: hbg-spa
spec:
  # type: NodePort
  selector:
    app: hbg-spa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      # nodePort: 30788
